<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.greenmagics.voip.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addcontact"
            android:id="@+id/textView"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="81dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SIPuser"
                android:id="@+id/label1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:paddingTop="8dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/editTextcontact"
                android:layout_gravity="left" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/XMPPuser"
                android:id="@+id/label2"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:paddingTop="8dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/editTextcontact2"
                android:layout_gravity="left" />


        </LinearLayout>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/addcontact"
            android:id="@+id/buttoncontact"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>
</ScrollView>
